# Api

Api_Class_Assignments/Saturday_Class_assignments/Class_07/Assignment_01/: README.md  chainlit.md  main.py
Api_Class_Assignments/Saturday_Class_assignments/Class_07/Assignment_02/: README.md  chainlit.md  main.py
Api_Class_Assignments/Saturday_Class_assignments/Class_07/Assignment_03/: README.md  main.py
Api_Class_Assignments/Saturday_Class_assignments/Class_08/Assignment_01/: main.py  pyproject.toml
Api_Class_Assignments/Saturday_Class_assignments/Class_08/Assignment_02/: main.py  pyproject.toml
Api_Class_Assignments/Saturday_Class_assignments/Class_08/Assignment_03/: main.py  pyproject.toml
Api_Class_Assignments/Saturday_Class_assignments/Class_08/Assignment_04/: main.py
Api_Class_Assignments/Saturday_Class_assignments/Class_09/Assignment_01/: README.md  assignment.md  main.py  my_config.py  pyproject.toml
Api_Class_Assignments/Thrusday_Class_Assignments/Day_03/Assignment_01/: README.md  chainlit.md  main.py  pyproject.toml
Api_Class_Assignments/Thrusday_Class_Assignments/Day_03/Assignment_02/: README.md  chainlit.md  main.py  pyproject.toml
Api_Class_Assignments/Thrusday_Class_Assignments/Day_03/Assignment_03/: README.md  chainlit.md  main.py  pyproject.toml  weather_api.py
Api_Class_Assignments/Thrusday_Class_Assignments/Day_03/Assignment_04/: README.md  chainlit.md  main.py  pyproject.toml
Api_Class_Assignments/Thrusday_Class_Assignments/Day_03/Assignment_05/: .gitignore  README.md
(+32 files in other folders)
